--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,7 +1,8 @@
 .home-container {
     height: 300px;
     color: white;
-    padding-left: 150px;
+    padding-left: 50px;
+    background-color: black;
   }
   
   .home-content h2 {
